--- a/src/app/components/dashboard/home/home.component.html
+++ b/src/app/components/dashboard/home/home.component.html
@@ -1,3 +1,3 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis temporibus laboriosam omnis inventore quisquam obcaecati, corrupti debitis nisi eaque eligendi ab suscipit mollitia sequi earum, dolorem unde ratione? Eligendi, placeat.</p>
+</div>
