register page added and styling changes

--- a/src/app/components/dashboard/home/home.component.html
+++ b/src/app/components/dashboard/home/home.component.html
@@ -1,3 +1,27 @@
 <div class="container">
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis temporibus laboriosam omnis inventore quisquam obcaecati, corrupti debitis nisi eaque eligendi ab suscipit mollitia sequi earum, dolorem unde ratione? Eligendi, placeat.</p>
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <div class="card-header">
+          <h4>Card Header</h4>
+        </div>
+        <div class="card-body">
+          <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo quas voluptate neque cum commodi soluta sequi officia totam accusantium temporibus nesciunt dolorum nihil voluptatem quod, maiores beatae facilis eius dolores.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <div class="card-header">
+          <h4>Card Header</h4>
+        </div>
+        <div class="card-body">
+          <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo quas voluptate neque cum commodi soluta sequi officia totam accusantium temporibus nesciunt dolorum nihil voluptatem quod, maiores beatae facilis eius dolores.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <!-- put some graphs here -->
+  </div>
 </div>
