--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,27 +1,39 @@
-<div class="modal-dialog text-center">
-  <div class="col-sm-9 main-section">
-    <div class="modal-content">
-      <div class="col-12 user-img">
-        <!-- <img src="../../../assets/images/user-img.jpg"> -->
-        <h3>LOGO</h3>
-      </div>
-      <div class="col-12 form-input">
-        <form [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm.value)">
-          <div class="form-group">
-            <input type="email" class="form-control" formControlName="email" placeholder="Enter Email">
-            <div *ngIf="loginForm.controls.email.hasError('pattern')">
-              Use A Valid Email
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6 col-md-6 offset-md-3">
+            <div class="account-wall">
+                <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
+                    alt="">
+                <form [formGroup]="loginForm" (ngSubmit)="singIn(loginForm.value)" class="form-signin">
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fa fa-at fa-2x"></i>
+                                </span>
+                            </div>
+                            <input type="email" class="form-control" formControlName="email" placeholder="Email" required autofocus>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="fa fa-key fa-2x"></i>
+                                </span>
+                            </div>
+                            <input type="password" class="form-control" formControlName="password" placeholder="Password" required autofocus>
+                        </div>
+                    </div>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                    <label class="checkbox pull-left">
+                        <input type="checkbox" value="remember-me"> Remember me
+                    </label>
+                    <a href="#" class="pull-right need-help">Need help? </a>
+                    <span class="clearfix"></span>
+                </form>
             </div>
-          </div>
-          <div class="form-group">
-            <input type="password" class="form-control" formControlName="password" placeholder="Enter Password">
-            <div *ngIf="loginForm.controls.password.hasError('minLength')">
-              Password Too Short
-            </div>
-          </div>
-          <button type="submit" [disabled]="loginForm.invalid" class="btn btn-success">Sign In</button>
-        </form>
-      </div>
+            <a [routerLink]="['/register']" class="text-center new-account">Create an account</a>
+        </div>
     </div>
-  </div>
 </div>
