--- a/src/app/components/partials/navbar/navbar.component.css
+++ b/src/app/components/partials/navbar/navbar.component.css
@@ -4,6 +4,12 @@ header {
     background-size: cover;
 }
 
+.logo span {
+    cursor: pointer;
+    font-size: 20px;
+    padding: 10px;
+}
+
 .logo {
     position: relative;
     float: left;
@@ -47,9 +53,8 @@ nav ul li a {
     width: 100%;
     /* background: #000; */
     color: #fff;
-    text-align: right;
+    text-align: left;
     box-sizing: border-box;
     padding: 15px 24px;
     cursor: pointer;
-    display: none;
 }
