--- a/src/app/components/dashboard/home/home.component.html
+++ b/src/app/components/dashboard/home/home.component.html
@@ -6,7 +6,8 @@
           <h4>Card Header</h4>
         </div>
         <div class="card-body">
-          <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo quas voluptate neque cum commodi soluta sequi officia totam accusantium temporibus nesciunt dolorum nihil voluptatem quod, maiores beatae facilis eius dolores.</p>
+          <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo quas voluptate neque cum commodi soluta sequi officia
+            totam accusantium temporibus nesciunt dolorum nihil voluptatem quod, maiores beatae facilis eius dolores.</p>
         </div>
       </div>
     </div>
@@ -16,12 +17,29 @@
           <h4>Card Header</h4>
         </div>
         <div class="card-body">
-          <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo quas voluptate neque cum commodi soluta sequi officia totam accusantium temporibus nesciunt dolorum nihil voluptatem quod, maiores beatae facilis eius dolores.</p>
+          <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo quas voluptate neque cum commodi soluta sequi officia
+            totam accusantium temporibus nesciunt dolorum nihil voluptatem quod, maiores beatae facilis eius dolores.</p>
         </div>
       </div>
     </div>
   </div>
   <div class="row">
     <!-- put some graphs here -->
+    <div class="col-md-6">
+      <div class="doughnut-chart">
+        <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType"></canvas>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="doughnut-chart">
+        <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType"></canvas>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="line-chart">
+      <canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" [colors]="lineChartColors"
+        [legend]="lineChartLegend" [chartType]="lineChartType"></canvas>
+    </div>
   </div>
 </div>
