--- a/src/app/components/dashboard/profile/profile.component.html
+++ b/src/app/components/dashboard/profile/profile.component.html
@@ -1,18 +1,21 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-8">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ullam praesentium laudantium asperiores expedita pariatur quia impedit, quis necessitatibus, facilis temporibus iusto fuga dolores facere qui odio aliquid. Autem, repellendus.</p>
-    </div>
     <div class="col-md-4">
       <div class="card">
         <div class="card-img-top text-center">
-            <img class="img-thumbnail" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=240" alt="">
+          <img class="img-thumbnail" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=240"
+            alt="">
         </div>
         <div class="card-body">
           <h4 class="card-title">Supratik Roy</h4>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores accusantium mollitia nobis, repellat rerum corporis animi. Sint odio voluptatem non dolor unde nisi animi, magnam officia eligendi assumenda atque minus!</p>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores accusantium mollitia nobis, repellat rerum
+            corporis animi. Sint odio voluptatem non dolor unde nisi animi, magnam officia eligendi assumenda atque minus!</p>
         </div>
       </div>
+    </div>
+    <div class="col-md-8">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ullam praesentium laudantium asperiores expedita pariatur
+        quia impedit, quis necessitatibus, facilis temporibus iusto fuga dolores facere qui odio aliquid. Autem, repellendus.</p>
     </div>
   </div>
 </div>
