--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -17,10 +17,12 @@
 {
     margin-top: 20px;
     padding: 40px 0px 20px 0px;
-    background-color: rgba(26, 52, 65, 0.7);
-    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    background-color: rgba(10, 27, 47, 0.7);
+    border: 2px solid rgb(26, 52, 65);
+    border-radius: 10px;
+    /* -moz-box-shadow: 15px 15px 10px #0e1f32;
+    -webkit-box-shadow: 15px 15px 10px #0e1f32;
+    box-shadow: 15px 15px 10px #0e1f32; */
 }
 .login-title
 {
