--- a/src/app/components/partials/sidebar/sidebar.component.html
+++ b/src/app/components/partials/sidebar/sidebar.component.html
@@ -9,9 +9,11 @@
     <!-- <img src="" alt="SideNav Logo"> -->
   </div>
   <div class="sidenav-items">
-      <a [routerLink]="['home']"><i class="fa fa-home"></i> Home</a>
+    <a *ngFor="let route of routerList" [routerLink]="[route.path]">
+      <i class="{{route.icon}}"></i> {{route.display}}</a>
+    <!-- <a [routerLink]="['home']"><i class="fa fa-home"></i> Home</a>
       <a [routerLink]="['profile']"><i class="fa fa-user"></i> Profile</a>
       <a [routerLink]="['my-docs']"><i class="fa fa-file"></i> My Documents</a>
-      <a [routerLink]="['upload']"><i class="fa fa-upload"></i> Upload</a>
+      <a [routerLink]="['upload']"><i class="fa fa-upload"></i> Upload</a> -->
   </div>
 </div>
