--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
       <div class="account-wall">
         <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
           alt="">
-        <form [formGroup]="loginForm" (ngSubmit)="singIn(loginForm.value)" class="form-signin">
+        <form [formGroup]="loginForm" (ngSubmit)="signIn(loginForm.value)" class="form-signin">
           <div class="form-group">
             <div class="input-group">
               <div class="input-group-prepend">
