--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -8,7 +8,9 @@
           <div class="form-group">
             <div class="input-group">
               <div class="input-group-prepend">
-                <i class="fa fa-at fa-2x"></i>
+                <span class="input-group-text">
+                  <i class="fa fa-at fa-2x"></i>
+                </span>
               </div>
               <input type="email" class="form-control" formControlName="email" placeholder="Email" required autofocus>
             </div>
@@ -16,7 +18,7 @@
           <div class="form-group">
             <div class="input-group">
               <div class="input-group-prepend">
-                <i class="fa fa-key fa-2x"></i>
+                <i class="fa fa-unlock fa-2x"></i>
               </div>
               <input type="password" class="form-control" formControlName="password" placeholder="Password" required autofocus>
             </div>
@@ -24,7 +26,9 @@
           <div class="form-group">
             <div class="input-group">
               <div class="input-group-prepend">
-                <i class="fa fa-key fa-2x"></i>
+                <span class="input-group-text">
+                  <i class="fa fa-unlock fa-2x"></i>
+                </span>
               </div>
               <input type="password" class="form-control" formControlName="confirmpassword" placeholder="Confirm Password" required autofocus>
             </div>
