--- a/src/app/components/dashboard/profile/profile.component.html
+++ b/src/app/components/dashboard/profile/profile.component.html
@@ -1,10 +1,9 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-4">
       <div class="card">
         <div class="card-img-top text-center">
-          <img class="img-thumbnail" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=240"
-            alt="">
+          <img class="img-thumbnail" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=240" alt="">
         </div>
         <div class="card-body">
           <h4 class="card-title">Supratik Roy</h4>
