--- a/src/app/components/dashboard/my-documents/my-documents.component.html
+++ b/src/app/components/dashboard/my-documents/my-documents.component.html
@@ -1,3 +1,3 @@
-<p>
-  my-documents works!
-</p>
+<div class="container-fluid">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio possimus aperiam alias, sed voluptatibus repellendus corporis atque mollitia assumenda consequatur eum voluptate, odit maiores veritatis quam? Libero sunt obcaecati tenetur?</p>
+</div>
