--- a/src/app/components/partials/navbar/navbar.component.html
+++ b/src/app/components/partials/navbar/navbar.component.html
@@ -1,8 +1,10 @@
 <header>
   <nav>
     <div class="logo">
-      <span (click)="toggleNav()"><i class="fa fa-bars"></i></span>
-      <a [routerLink]="['home']">LOGO</a>
+      <span (click)="toggleNav()"><i class="fa fa-bars fa-2x"></i></span>
+      <a [routerLink]="['profile']" class="text-center">
+        <img class="circle-rounded" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=40" alt="">
+      </a>
     </div>
     <div class="menu">
       <ul>
