--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -18,7 +18,9 @@
           <div class="form-group">
             <div class="input-group">
               <div class="input-group-prepend">
-                <i class="fa fa-unlock fa-2x"></i>
+                <span class="input-group-text">
+                  <i class="fa fa-unlock fa-2x"></i>
+                </span>
               </div>
               <input type="password" class="form-control" formControlName="password" placeholder="Password" required autofocus>
             </div>
