added dynamic chart and table with pagenation

--- a/src/app/components/dashboard/home/home.component.html
+++ b/src/app/components/dashboard/home/home.component.html
@@ -27,7 +27,8 @@
     <!-- put some graphs here -->
     <div class="col-md-6">
       <div class="doughnut-chart">
-        <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType"></canvas>
+        <canvas id="todo">{{chart}}</canvas>
+        <!-- <canvas id="todo" baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType"></canvas> -->
       </div>
     </div>
     <div class="col-md-6">
