--- a/src/app/components/partials/navbar/navbar.component.css
+++ b/src/app/components/partials/navbar/navbar.component.css
@@ -21,6 +21,11 @@ header {
     font-size: 20px;
 }
 
+.logo i {
+    font-size: 30px;
+    margin: 0 10px 0 10px;
+}
+
 nav {
     position: relative;
     z-index: 1; 
