--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -36,7 +36,7 @@
             </div>
           </div>
           <button [disabled]="registerForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
-          <a href="#" class="pull-right need-help">Need help? </a>
+          <a [routerLink]="['/login']" class="pull-right need-help">Already A Member? Sign In</a>
           <span class="clearfix"></span>
         </form>
       </div>
