--- a/src/app/components/dashboard/home/home.component.css
+++ b/src/app/components/dashboard/home/home.component.css
@@ -18,7 +18,7 @@
 
 .line-chart {
     width: 100%;
-    margin: 15px;
+    margin-top: 20px;
     padding: 15px;
     background: rgba(10, 27, 47, 0.7);
     border: 2px solid rgb(26, 52, 65);
