--- a/src/app/components/dashboard/upload/upload.component.html
+++ b/src/app/components/dashboard/upload/upload.component.html
@@ -1,3 +1,2 @@
-<div class="container-fluid">
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere fugiat omnis fugit cupiditate quos earum sapiente expedita odit eveniet dolor sint porro illum distinctio dolorem, ut rem odio tempore cum!</p>
-</div>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere fugiat omnis fugit cupiditate quos earum sapiente expedita
+  odit eveniet dolor sint porro illum distinctio dolorem, ut rem odio tempore cum!</p>
