--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,5 +1,7 @@
 <div id="main">
     <app-sidebar></app-sidebar>
     <app-navbar></app-navbar>
-    <router-outlet></router-outlet>
+    <div class="container-fluid">
+        <router-outlet></router-outlet>
+    </div>
 </div>
