--- a/src/app/components/partials/navbar/navbar.component.css
+++ b/src/app/components/partials/navbar/navbar.component.css
@@ -1,68 +1,11 @@
-header {
-    position: relative;
-    margin-top: -10px;
-    width: 100%;
-    background: rgba(10, 27, 47, 0.7);
-    background-size: cover;
-}
-
-.logo span {
-    cursor: pointer;
-    font-size: 20px;
-    padding: 10px;
-}
-
-.logo {
-    position: relative;
-    float: left;
-    margin-top: 15px;
-    color: #fff;
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.logo i {
-    font-size: 30px;
-    margin: 0 10px 0 10px;
-}
-
-nav {
-    position: relative;
-    z-index: 1; 
-    width: 100%;
-}
-
-nav ul {
-    list-style: none;
-    background: rgba(0, 0, 0, 0);
-    overflow: hidden;
-    color: #fff;
-    padding: 0;
-    margin: 0;
-    text-align: right;
-    transition: 1s;
-    /* padding-right: 40px; */
-}
-
-nav ul li {
-    display: inline-block;
-    padding: 20px;
-    
-}
-
-nav ul li a {
-    text-decoration: none;
-    font-size: 20px;
+.navbar-brand {
     cursor: pointer;
 }
 
-
-.menu-icon {
-    width: 100%;
-    /* background: #000; */
-    color: #fff;
-    text-align: left;
-    box-sizing: border-box;
-    padding: 15px 24px;
+.nav-link {
     cursor: pointer;
+}
+
+.bg-dark {
+    background: rgba(10, 27, 47, 0.7) !important;
 }
