--- a/src/app/components/partials/navbar/navbar.component.html
+++ b/src/app/components/partials/navbar/navbar.component.html
@@ -1,16 +1,22 @@
-<header>
-  <nav>
-    <div class="logo">
-      <span (click)="toggleNav()"><i class="fa fa-bars"></i></span>
-      <a [routerLink]="['profile']" class="text-center">
-        <img class="circle-rounded" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=40" alt="">
+<nav class="navbar navbar-expand-sm bg-dark">
+  <a class="navbar-brand" (click)="toggleNav()">
+    <i class="fa fa-bars"></i>
+  </a>
+  <a [routerLink]="['profile']" class="navbar-brand">
+    <img src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=25" alt="Profile">
+  </a>
+  <!-- Links -->
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+      <a class="nav-link">
+        <i class="fa fa-bell"></i>
       </a>
-    </div>
-    <div class="menu">
-      <ul>
-        <li><a><i class="fa fa-bell"></i></a></li>
-        <li><a><i class="fa fa-envelope"></i></a></li>
-      </ul>
-    </div>
-  </nav>
-</header>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">
+        <i class="fa fa-envelope"></i>
+      </a>
+    </li>
+  </ul>
+
+</nav>
