--- a/src/app/components/partials/navbar/navbar.component.html
+++ b/src/app/components/partials/navbar/navbar.component.html
@@ -5,6 +5,16 @@
   <a [routerLink]="['profile']" class="navbar-brand">
     <img src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=25" alt="Profile">
   </a>
+  <form class="form-inline my-2 my-lg-0">
+    <div class="input-group">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <div class="input-group-append">
+        <span class="input-group-text">
+          <i class="fa fa-search"></i>
+        </span>
+      </div>
+    </div>
+  </form>
   <!-- Links -->
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
