changed color scheme and added fixed navbar

--- a/src/app/components/partials/navbar/navbar.component.html
+++ b/src/app/components/partials/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-dark">
+<nav id="navbar" class="navbar navbar-expand-sm bg-dark">
   <a class="navbar-brand" (click)="toggleNav()">
     <i class="fa fa-bars"></i>
   </a>
@@ -9,7 +9,7 @@
     <div class="input-group">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <div class="input-group-append">
-        <span class="input-group-text">
+        <span class="input-group-text search">
           <i class="fa fa-search"></i>
         </span>
       </div>
