--- a/src/app/components/partials/navbar/navbar.component.css
+++ b/src/app/components/partials/navbar/navbar.component.css
@@ -6,11 +6,25 @@
     cursor: pointer;
 }
 
+.nav-item:hover {
+    color: #59fad6;
+}
+
 .bg-dark {
-    background: rgba(10, 27, 47, 0.7) !important;
+    background: rgb(255, 255, 255, 0.1) !important;
 }
 
 .input-group-text {
+    border: none;
     color: #ffffff;
     background-color: transparent;
+}
+
+.search {
+    cursor: pointer;
+}
+
+.input-group {
+    border: 1px solid #59fad6;
+    border-radius: .30rem;
 }
