--- a/src/app/components/partials/sidebar/sidebar.component.css
+++ b/src/app/components/partials/sidebar/sidebar.component.css
@@ -5,7 +5,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgba(26, 52, 65, 0.7);
+    background-color: rgba(255, 255, 255, 0.1);
     overflow-x: hidden;
     transition: 0.5s;
     /* padding-top: 60px; */
@@ -29,7 +29,7 @@
 
 .sidenav a:hover {
     /* background: #416d5f; */
-    color: #416d5f;
+    color: #59fad6;
 }
 
 
