removed sidebar, changed navbar style

--- a/src/app/components/partials/navbar/navbar.component.html
+++ b/src/app/components/partials/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav id="navbar" class="navbar navbar-expand-sm bg-dark">
+<!-- <nav id="navbar" class="navbar navbar-expand-sm bg-dark">
   <a class="navbar-brand" (click)="toggleNav()">
     <i class="fa fa-bars"></i>
   </a>
@@ -15,7 +15,6 @@
       </div>
     </div>
   </form>
-  <!-- Links -->
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
       <a class="nav-link">
@@ -28,5 +27,35 @@
       </a>
     </li>
   </ul>
+</nav> -->
 
+<nav id="navbar" class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <a [routerLink]="['home']" class="navbar-brand">
+      <img src="assets/images/user-img.jpg" width="20" alt="Home">
+    </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['profile']">
+          <img src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=25" alt="Profile">
+          Supratik Roy
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['home']">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['profile']"><i class="fa fa-user"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"><i class="fa fa-bell"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"><i class="fa fa-comment"></i></a>
+      </li>
+    </ul>
+  </div>  
 </nav>
