--- a/src/app/components/partials/navbar/navbar.component.css
+++ b/src/app/components/partials/navbar/navbar.component.css
@@ -6,8 +6,17 @@
     cursor: pointer;
 }
 
+.nav-item {
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
 .nav-item:hover {
-    color: #59fad6;
+    /* background: rgb(6, 80, 64); */
+    background: rgba(0, 59, 47, 0.9);
+    /* color: rgba(6, 80, 64, 0.9) !important; */
+    transition: ease-in 0.5s;
+    border-radius: 5px;
 }
 
 .bg-dark {
@@ -30,5 +39,5 @@
 }
 
 .fixed-top {
-    background: rgb(13, 30, 49);
+    background: rgba(6, 80, 64, 0.9);
 }
