--- a/src/app/components/partials/navbar/navbar.component.html
+++ b/src/app/components/partials/navbar/navbar.component.html
@@ -1,30 +1,50 @@
 <nav id="navbar" class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <a [routerLink]="['home']" class="navbar-brand">
-      <img class="rounded-circle" src="assets/images/user-img.jpg" width="25" alt="Home">
-    </a>
+  <a [routerLink]="['home']" class="navbar-brand">
+    <img class="rounded-circle" src="assets/images/logo.png" width="30" height="25" alt="Home">
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <!-- Dropdown -->
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+          Components
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" [routerLink]="['map']">Google Map</a>
+          <a class="dropdown-item" [routerLink]="['modals']">Modals</a>
+          <a class="dropdown-item" [routerLink]="['elements']">Elements</a>
+          <a class="dropdown-item" [routerLink]="['upload']">Upload</a>
+        </div>
+      </li>
+    </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
         <a class="nav-link" [routerLink]="['profile']">
-          <img class="rounded-circle" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=25" alt="Profile">
-          Supratik Roy
+          <img class="rounded-circle" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=25"
+            alt="Profile"> Supratik Roy
         </a>
       </li>
       <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
         <a class="nav-link" [routerLink]="['home']">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"><i class="fa fa-bell"></i></a>
+        <a class="nav-link">
+          <i class="fa fa-bell"></i>
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"><i class="fa fa-comment"></i></a>
+        <a class="nav-link">
+          <i class="fa fa-comment"></i>
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="onLogout()"><i class="fa fa-power-off"></i></a>
+        <a class="nav-link" (click)="onLogout()">
+          <i class="fa fa-power-off"></i>
+        </a>
       </li>
     </ul>
-  </div>  
+  </div>
 </nav>
