changed elements, fixed map and added component

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div id="main">
-    <app-navbar></app-navbar>
+    <app-navbar [nCount]="n_count" [mCount]="m_count" [notifications]="notifications" [messages]="messages"></app-navbar>
     <div class="container-fluid">
         <router-outlet></router-outlet>
     </div>
