--- a/src/app/components/dashboard/map/map.component.html
+++ b/src/app/components/dashboard/map/map.component.html
@@ -1,2 +1,3 @@
-<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false" [zoomControl]="false">
+<agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom" [disableDefaultUI]="false" [zoomControl]="false">
+    <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
 </agm-map>
